--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-session": "^1.18.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
-    "nodemon": "^3.1.4",
+    "nodemailer": "^7.0.12",
+    "nodemon": "^3.1.11",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
