--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+     "@getbrevo/brevo": "^3.0.1",
     "@google/generative-ai": "^0.15.0",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
