--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-     "@getbrevo/brevo": "^3.0.1",
+    "@getbrevo/brevo": "^3.0.1",
     "@google/generative-ai": "^0.15.0",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "googleapis": "^169.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
-    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
